feat(ai): LLM API 호출 시와 전체 분석 완료 시 로깅