@@ -1,13 +1,14 @@
 package com.example.konnect_backend.domain.ai.service.prompt.module;
 
+import com.example.konnect_backend.domain.ai.dto.internal.GeminiCallResult;
 import com.example.konnect_backend.domain.ai.entity.PromptTemplate;
 import com.example.konnect_backend.domain.ai.exception.DocumentAnalysisException;
 import com.example.konnect_backend.domain.ai.infra.GeminiService;
+import com.example.konnect_backend.domain.ai.model.vo.TokenUsage;
 import com.example.konnect_backend.domain.ai.service.pipeline.PipelineContext;
 import com.example.konnect_backend.domain.ai.service.prompt.PromptTemplateResolver;
 import com.example.konnect_backend.domain.ai.util.PromptUtils;
 import com.example.konnect_backend.global.code.status.ErrorStatus;
-import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
@@ -17,7 +18,7 @@ import java.util.Map;
 
 /**
  * 번역 모듈 (Gemini API 사용)
- *
+ * <p>
  * ## 모델 선택: gemini-2.0-flash-lite
  * - 이유: 번역은 상대적으로 단순한 작업
  * - 한국어 → 대상 언어 직접 번역
@@ -39,18 +40,21 @@ public class TranslatorModule implements PromptModule {
     public static final int MAX_TOKENS = 4000;
 
     @Override
-    public void process(PromptTemplate promptTemplate, PipelineContext context) {
-        Map<String, String> vars = prepareVars(context);
+    public TokenUsage process(PromptTemplate promptTemplate, PipelineContext context) {
+        Map<String, String> vars = getVars(context);
         String prompt = resolver.resolve(promptTemplate, vars);
 
         try {
-            log.info("번역 시작 (Gemini Lite 모델): 한국어 -> {}", context.getTargetLanguage().getDisplayName());
+            log.info("번역 시작 (Gemini Lite 모델): 한국어 -> {}",
+                context.getTargetLanguage().getDisplayName());
             long startTime = System.currentTimeMillis();
 
             // Gemini Lite 모델 사용 (preferPrimary = false)
-            String translatedText = geminiService.generateSimpleContent(prompt, TEMPERATURE, MAX_TOKENS).response();
+            GeminiCallResult callResult = geminiService.generateSimpleContent(prompt, TEMPERATURE,
+                MAX_TOKENS);
+            String translatedText = callResult.response();
 
-            if (translatedText == null || translatedText.trim().isEmpty()) {
+            if (translatedText == null || translatedText.isBlank()) {
                 throw new DocumentAnalysisException(ErrorStatus.TRANSLATION_FAILED);
             }
 
@@ -59,6 +63,8 @@ public class TranslatorModule implements PromptModule {
             context.setCompletedStage(PipelineContext.PipelineStage.TRANSLATED);
 
             log.info("번역 소요시간 {} ms", System.currentTimeMillis() - startTime);
+
+            return callResult.tokenUsage();
         } catch (DocumentAnalysisException e) {
             throw e;
         } catch (Exception e) {
@@ -72,7 +78,7 @@ public class TranslatorModule implements PromptModule {
         return "TRANSLATION";
     }
 
-    private Map<String, String> prepareVars(PipelineContext context) {
+    public Map<String, String> getVars(PipelineContext context) {
         String simplifiedKorean = context.getSimplifiedKorean();
         String targetLanguage = context.getTargetLanguage().getDisplayName();
 
